# netprotocol

./: .gitmodules  meson.build  meson.options  submodules.txt
src/: backend.hpp  callbacks.cpp  callbacks.hpp  common.hpp  meson.build  packet-parser.cpp  packet-parser.hpp
src/discord/: client.cpp  client.hpp  crypto  meson.build
src/enc/: client.cpp  client.hpp  crypto  meson.build  server.cpp  server.hpp
src/mock-c2c/: client.cpp  client.hpp  meson.build
src/socket/: client.cpp  client.hpp  macro.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp
src/tcp/: client.cpp  client.hpp  common.cpp  common.hpp  meson.build  server.cpp  server.hpp
src/uds/: client.cpp  client.hpp  meson.build  server.cpp  server.hpp
src/ws/: client.cpp  client.hpp  meson.build  server.cpp  server.hpp  ws
tests/: run.sh
tests/multi-client/: common.cpp  enc.cpp  meson.build  tcp.cpp  uds.cpp  ws.cpp
tests/multi-client/cases/: backend.cpp  cases.hpp  simple-server.cpp
tests/single-client/: common.cpp  discord.cpp  meson.build  mock.cpp
