subdir('crypto')

netprotocol_enc_server_files = files(
  'server.cpp',
  'crypto/c20p1305.cpp',
  'crypto/cipher.cpp',
  'crypto/x25519.cpp',
)

netprotocol_enc_client_files = files(
  'client.cpp',
  'crypto/c20p1305.cpp',
  'crypto/cipher.cpp',
  'crypto/x25519.cpp',
)

netprotocol_enc_deps = crypto_utils_deps
